--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0-alpha1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
